feat: Migrate Orders, AdminSettings, and Contact modules